--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,15 @@ h1  {
     }
 
 p	{
-		margin-left: 15px;
-		margin-right: 15px;
+		margin-left: 30px;
+		margin-right: 30px;
 		font-family: 'Outfit', sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 18px;
+        font-size: 13px;
         line-height: 1.15;
         letter-spacing: -.02em;
-        color: black;
+        color: grey;
         -webkit-font-smoothing: antialiased;
 	}
 	
